# faker_airtravel

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
faker_airtravel/: __init__.py  airlines_dict.py  airport_dict.py  airports.py  commons.py  constants.py  reservation.py  trip.py
faker_airtravel/airtravel/: __init__.py
faker_airtravel/airtravel/tests/: test_airports.py
faker_airtravel/tests/: test_airport_weighted.py  test_airports.py  test_origin_destination.py  test_reservation.py  test_reservation_weighted.py  test_trip.py
src/airtravel/: __init__.py  airport_dict.py  airports.py
src/airtravel/tests/: test_airports.py
src/vehicle/: vehicle_dict.py
tests/: conftest.old  conftest.py  test_airports.py
