[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "faker_airtravel"
author = "David Kotschessa"
author-email = "itzdavey@gmail.com"
home-page = "https://github.com/dkotschessa/faker_airtravel.git"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov", "tox"]